RESOLVED FIXED157522
[SpeculativeValidation] Do not start a preload if there is already one pending
https://bugs.webkit.org/show_bug.cgi?id=157522
Summary [SpeculativeValidation] Do not start a preload if there is already one pending
Chris Dumez
Reported 2016-05-10 09:32:59 PDT
Do not start a preload if there is already one pending. We failed to check in SpeculativeLoadManager::preloadEntry() if there was already a pending preload. As a result, we would sometimes cancel an already pending preload and start one from scratch which is inefficient. It would also sometimes lead to hitting an assertion in the SpeculativeLoad destructor because we could destroy the SpeculativeLoad without finishing or cancelling the load.
Attachments
Patch (2.52 KB, patch)
2016-05-10 09:41 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-05-10 09:33:18 PDT
Chris Dumez
Comment 2 2016-05-10 09:41:07 PDT
Chris Dumez
Comment 3 2016-05-10 10:44:59 PDT
Comment on attachment 278504 [details] Patch Clearing flags on attachment: 278504 Committed r200630: <http://trac.webkit.org/changeset/200630>
Chris Dumez
Comment 4 2016-05-10 10:45:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.